IndexPage: fixed timestamp alignment, again...

--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -25,6 +25,7 @@ main {
       grid-column: 1 / span 1;
       align-self: start;
       user-select: none;
+      align-self: end;
     }
 
     a {
